--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -10,7 +10,7 @@ body {
 
  footer
  {
-    min-width: 460px;
+    min-width: 320px;
  }
 
  noscript
@@ -20,13 +20,7 @@ body {
 
  img
  {
-    border-radius: 10%;
- }
-
- a
- {
-  color:inherit;
-  text-decoration: none;
+    border-radius: 16px;
  }
 
  #pageOne
@@ -38,7 +32,7 @@ body {
  {
    padding-top:30vh;
    text-align:center;
-    min-width: 460px;
+    min-width: 320px;
  }
 
  #nameTitle
@@ -63,10 +57,21 @@ body {
    margin-right:auto;
  }
 
- #twitterButton
+ #buttonDiv a
+ {
+   color:inherit;
+   text-decoration: none;
+ }
+
+ #twtterButton
  {
    color:#26a69a;
    opacity:0;
+ }
+
+ #twtterButton:hover
+ {
+   color:#80cbc4;
  }
 
  #githubButton
@@ -75,16 +80,46 @@ body {
    opacity:0;
  }
 
- #linkedinButton
+ #githubButton:hover
+ {
+   color:#80cbc4
+ }
+
+ #lnkdnButton
  {
    color:#26a69a;
    opacity:0;
+ }
+
+ #lnkdnButton:hover
+ {
+   color:#80cbc4
  }
 
  #resumeButton
  {
    color:#26a69a;
    opacity:0;
+ }
+
+ #resumeButton:hover
+ {
+   color:#80cbc4;
+ }
+
+ #emailP
+ {
+   display:none;
+ }
+
+ #emailP a
+ {
+   color:#26a69a;
+ }
+
+ #emailP a:hover
+ {
+   color:#80cbc4
  }
 
  #pageTwo
@@ -94,7 +129,7 @@ body {
 
  #mainContainer2
  {
-   min-width:460px;
+   min-width:320px;
    padding-left:20px;
    padding-right:20px;
    display:none;
@@ -107,7 +142,7 @@ body {
 
  #bioCard
  {
-   border-radius:4%;
+   border-radius:16px;
    margin-left:auto;
    margin-right:auto;
    max-width:800px;
