--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -8,11 +8,6 @@ body {
    flex: 1 0 auto;
  }
 
- footer
- {
-    min-width: 320px;
- }
-
  noscript
  {
    color:red;
@@ -20,7 +15,10 @@ body {
 
  img
  {
-    border-radius: 16px;
+   border-radius: 16px;
+   height:auto;
+   width:100%;
+   max-width:300px;
  }
 
  #pageOne
@@ -32,7 +30,6 @@ body {
  {
    padding-top:30vh;
    text-align:center;
-    min-width: 320px;
  }
 
  #nameTitle
@@ -63,10 +60,65 @@ body {
    text-decoration: none;
  }
 
- #twtterButton
+@media (min-width: 501px)
+{
+   #twtterButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:4em;
+   }
+
+   #githubButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:4em;
+   }
+
+   #lnkdnButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:4em;
+   }
+
+   #resumeButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:4em;
+   }
+ }
+ @media (max-width:500px)
  {
-   color:#26a69a;
-   opacity:0;
+   #twtterButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:2.5em;
+   }
+
+   #githubButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:2.5em;
+   }
+
+   #lnkdnButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:2.5em;
+   }
+
+   #resumeButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:2.5em;
+   }
  }
 
  #twtterButton:hover
@@ -74,32 +126,14 @@ body {
    color:#80cbc4;
  }
 
- #githubButton
- {
-   color:#26a69a;
-   opacity:0;
- }
-
  #githubButton:hover
  {
    color:#80cbc4
  }
 
- #lnkdnButton
- {
-   color:#26a69a;
-   opacity:0;
- }
-
  #lnkdnButton:hover
  {
    color:#80cbc4
- }
-
- #resumeButton
- {
-   color:#26a69a;
-   opacity:0;
  }
 
  #resumeButton:hover
@@ -129,7 +163,6 @@ body {
 
  #mainContainer2
  {
-   min-width:320px;
    padding-left:20px;
    padding-right:20px;
    display:none;
