--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -30,6 +30,8 @@ body {
  {
    padding-top:30vh;
    text-align:center;
+   padding-left:20px;
+   padding-right:20px;
  }
 
  #nameTitle
@@ -90,34 +92,64 @@ body {
      font-size:4em;
    }
  }
- @media (max-width:500px)
+ @media (min-width:400px) and (max-width:500px)
  {
    #twtterButton
    {
      color:#26a69a;
      opacity:0;
-     font-size:2.5em;
+     font-size:3em;
    }
 
    #githubButton
    {
      color:#26a69a;
      opacity:0;
-     font-size:2.5em;
+     font-size:3em;
    }
 
    #lnkdnButton
    {
      color:#26a69a;
      opacity:0;
-     font-size:2.5em;
+     font-size:3em;
    }
 
    #resumeButton
    {
      color:#26a69a;
      opacity:0;
-     font-size:2.5em;
+     font-size:3em;
+   }
+ }
+ @media (max-width:399px)
+ {
+   #twtterButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:2.4em;
+   }
+
+   #githubButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:2.4em;
+   }
+
+   #lnkdnButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:2.4em;
+   }
+
+   #resumeButton
+   {
+     color:#26a69a;
+     opacity:0;
+     font-size:2.4em;
    }
  }
 
