--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,6 +1,8 @@
 body {
    display: flex;
+   min-height: 100vh;
    flex-direction: column;
+   background-color:#c8e6c9;
  }
 
  main {
@@ -27,7 +29,6 @@ body {
 
  #mainContainer
  {
-   min-height: 100vh;
    padding-top:30vh;
    text-align:center;
    padding-left:20px;
