--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,15 @@ body {
 }
 
 h1 {
-	font-size: 4vw;
+	font-size: 3vw;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 h2 {
-	font-size: 3vw;
+	font-size: 2.5vw;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .App {
@@ -46,7 +50,7 @@ h2 {
 }
 
 .socialMediaButton {
-	font-size: 120px;
+	font-size: 10vw;
 	padding-left: 25px;
 	padding-right: 25px;
 }
@@ -92,7 +96,7 @@ h2 {
 }
 
 .navigatorPage {
-	max-width: 70%;
+	max-width: 60%;
 	min-height: 600px;
 	margin-top: 20px;
 	margin-bottom: 50px;
@@ -105,6 +109,10 @@ h2 {
 
 thead {
 	font-weight: bold;
+}
+
+.errorEntry {
+	color: red;
 }
 
 footer {
@@ -136,6 +144,30 @@ footer {
 		width: 175px;
 		height: 175px;
 	}
+
+	.socialMediaButton {
+		font-size: 120px;
+		padding-left: 25px;
+		padding-right: 25px;
+	}
+}
+
+@media (min-width: 1200px) {
+	
+	.unselectedButton, .selectedButton {
+		font-size: 1.2vw;
+		width:10vw;
+		height: 5vh;
+	}
+
+}
+
+@media (max-width: 700px) {
+
+	.navigatorPage {
+		max-width: 90%;
+	}
+
 }
 
 @media (max-width: 500px) {
@@ -143,4 +175,5 @@ footer {
 	.repoStats {
 		display: none;
 	}
+
 }
