--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #d9e8f7;
 	height: 100%;
-	font-size: 1.2vw;
+	font-size: 1.3vw;
 }
 
 h1 {
@@ -16,29 +16,38 @@ h2 {
 	padding-right: 10px;
 }
 
+.headerGroup-appear {
+  opacity: 0.01;
+}
+
+.headerGroup-appear.headerGroup-appear-active {
+  opacity: 1;
+  transition: opacity 1s ease-in;
+}
+
 .App {
-	margin-top: 100px;
+	margin-top: 10vh;
 	text-align: center;
 }
 
 .unselectedButton {
 	font-weight: normal;
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-bottom: 10px;
+	margin-left: .5vw;
+	margin-right: .5vw;
+	margin-bottom: 1.5vh;
 	cursor: pointer;
 }
 
 .selectedButton {
 	font-weight: bold;
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-bottom: 10px;
+	margin-left: .5vw;
+	margin-right: .5vw;
+	margin-bottom: 1.5vh;
 	cursor: pointer;
 }
 
 .linkIcon {
-	padding-left: 5px;
+	padding-left: .5vw;
 }
 
 .repoIcon {
@@ -51,8 +60,18 @@ h2 {
 
 .socialMediaButton {
 	font-size: 10vw;
-	padding-left: 25px;
-	padding-right: 25px;
+	padding-left: 2vw;
+	padding-right: 2vw;
+}
+
+.buttonGroup-appear {
+	transform: translate(100%);
+}
+
+.buttonGroup-appear.buttonGroup-appear-active {
+
+	transform: translate(0%);
+	transition: transform 1000ms ease-in;
 }
 
 .portraitImage {
@@ -65,46 +84,29 @@ h2 {
 }
 
 .navigator {
-	margin-top: 20px;
+	margin-top: 3vh;
 }
 
 .navigatorGroup-appear {
-  opacity: 0.01;
+	transform: scale(.1, .1);
 }
 
 .navigatorGroup-appear.navigatorGroup-appear-active {
-  opacity: 1;
-  transition: opacity 3s ease-in;
-}
 
-.navigatorGroup-enter {
-	opacity: 0.01;
-}
-
-.navigatorGroup-enter.navigatorGroup-enter-active {
-	opacity: 1;
-	transition: opacity 3s ease-in;
-}
-
-.navigatorGroup-leave {
-	opacity: 1;
-}
-
-.navigatorGroup-leave.navigatorGroup-leave-active {
-	opacity: 0.01;
-	transition: opacity 3s ease-in;
+	transform: scale(1, 1);
+	transition: transform 500ms ease-in;
 }
 
 .navigatorPage {
 	max-width: 60%;
 	min-height: 600px;
-	margin-top: 20px;
-	margin-bottom: 50px;
+	margin-top: 2vh;
+	margin-bottom: 30vh;
 	margin-left: auto;
 	margin-right:auto;
 	text-align: left;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-left: 1vw;
+	padding-right: 1vw;
 }
 
 thead {
@@ -121,8 +123,8 @@ footer {
 }
 
 .footer-container {
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 3vh;
+	padding-bottom: 3vh;
 	text-align:center;
 }
 
@@ -162,7 +164,7 @@ footer {
 
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
 
 	.navigatorPage {
 		max-width: 90%;
