--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,54 @@
+/*Icomoon Icons from FontAwesome*/
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?2ks902');
+  src:  url('fonts/icomoon.eot?2ks902#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?2ks902') format('truetype'),
+    url('fonts/icomoon.woff?2ks902') format('woff'),
+    url('fonts/icomoon.svg?2ks902#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-star:before {
+  content: "\f005";
+}
+.icon-eye:before {
+  content: "\f06e";
+}
+.icon-twitter:before {
+  content: "\f099";
+}
+.icon-linkedin:before {
+  content: "\f0e1";
+}
+.icon-github-alt:before {
+  content: "\f113";
+}
+.icon-code-fork:before {
+  content: "\f126";
+}
+.icon-file-pdf-o:before {
+  content: "\f1c1";
+}
+
+
 body {
 	background-color: #d9e8f7;
 	height: 100%;
@@ -76,6 +127,8 @@ h2 {
 
 .portraitImage {
 	display: block;
+	margin-top:1vh;
+	margin-bottom:1vh;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 50%;
