Fixed social media button underlining.

--- a/src/App.css
+++ b/src/App.css
@@ -116,11 +116,7 @@ h2 {
 	text-decoration: none;
 }
 
-.socialMediaButton:hover {
-	text-decoration: none;
-}
-
-.socialMediaButton:selection {
+.socialMediaButton:hover, .socialMediaButton:active, .socialMediaButton:link, .socialMediaButton:visited {
 	text-decoration: none;
 }
 
