Added fade in transition.

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,25 @@
+@-webkit-keyframes fadein{
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+@-moz-keyframes fadein{
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+@-o-keyframes fadein{
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+@keyframes fadein{
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
 body{
   margin-top:60px;
+  -webkit-animation: 3s fadein;
+  -moz-animation: 3s fadein;
+  -o-animation: 3s fadein;
+  animation: 3s fadein;
 }
 .grid{
   text-align:center;
